k8s/test/redis-test.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-test
  labels:
    app: redis-test
spec:
  type: NodePort
  ports:
    - port: 6379
      targetPort: 6379
      nodePort: 32381
  selector:
    app: redis-test
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-test
spec:
  selector:
    matchLabels:
      app: redis-test
  replicas: 1
  template:
    metadata:
      labels:
        app: redis-test
    spec:
      containers:
        - name: redis
          image: redis:7.2-alpine
          ports:
            - containerPort: 6379
          command: ["redis-server", "--notify-keyspace-events", "Ex", "--appendonly", "yes"]
          volumeMounts:
            - name: redis-test-pv
              mountPath: /data
      volumes:
        - name: redis-test-pv
          persistentVolumeClaim:
            claimName: redis-test-data
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: redis-test-data
spec:
  accessModes:
    - ReadWriteOnce
  resources:
    requests:
      storage: 2Gi
